Fix html css errors

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,8 @@
 </head>
 
 <body class="text-center">
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <app-root style=" display:contents "></app-root>
+  <app-root class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"></app-root>
 </body>
-</div>
+
 
 </html>
